--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.debug.*
 Miniconda3-py37_4.10.3-Linux-x86_64.sh
 /conda/
-gh_2.3.0_linux_amd64*
-gh_release_changelog_tmp.md
+gh_*_linux_amd64*
+gh_release_changelog_tmp*
