--- a/.github/workflows/submodule-updates.yml
+++ b/.github/workflows/submodule-updates.yml
@@ -6,7 +6,7 @@ on:
   # https://crontab.guru/#00_20_*_*_*
   # UTC: 20:00 HRS
   # IST: 01:30 HRS
-    - cron: '00 20 * * *'
+    - cron: '00 22 * * *'
 
 
 
@@ -42,6 +42,11 @@ jobs:
 
 
     steps:
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
 
       # checkout our repo
       - name: check out repo
@@ -136,6 +141,7 @@ jobs:
         if: ${{ env.REPO__SUBMODULE_UPDATE_PR_CREATE == 'yes' }}
         uses: actions/checkout@v2
         with:
+          ref: ${{ env.REPO__TARGET_BRANCH }}
           submodules: 'true'
           path: ./${{ env.REPO__CHECKOUT_PATH }} # using the same path as before, overwrites?
           fetch-depth: 0 # we need a full clone to update submodule rev (is this true?)
@@ -145,10 +151,9 @@ jobs:
         run:  |
           REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME="GHARIAL-${{ env.SUBMODULE_REPO__NAME }}-${{ env.SUBMODULE_REPO__SHA1 }}"
           REPO__SUBMODULE_UPDATE_PR_TITLE="[GHARIAL] bump submodule ${{ env.SUBMODULE_REPO__NAME }} from ${{ env.REPO__SUBMODULE_SHA1 }} to ${{ env.SUBMODULE_REPO__SHA1 }}"
+          REPO__SUBMODULE_UPDATE_PR_BODY="[GHARIAL] automatic PR created by GHARIAL-DECEPTICON"
           cd ${{ env.REPO__CHECKOUT_PATH }}
-          git checkout ${{ env.REPO__TARGET_BRANCH }}
-          git pull
-          git config user.name "coolbreeze413"
+          git config user.name "github-actions"
           git config user.email ""
           git checkout -b "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
           cd ${{ env.REPO__SUBMODULE__REL_PATH }}
@@ -161,9 +166,8 @@ jobs:
           git commit -m "$REPO__SUBMODULE_UPDATE_PR_TITLE"
           git status
           git push -u origin "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME"
-          PR_BODY="Add some more details here?"
           PR_URL=$(gh pr create --title "$REPO__SUBMODULE_UPDATE_PR_TITLE" \
-             --body "$PR_BODY" \
+             --body "$REPO__SUBMODULE_UPDATE_PR_BODY" \
              --head "$REPO__SUBMODULE_UPDATE_PR_BRANCH_NAME" \
              --base "${{ env.REPO__TARGET_BRANCH }}" \
              )
