--- a/.github/workflows/test-json-array.yml
+++ b/.github/workflows/test-json-array.yml
@@ -20,7 +20,7 @@ jobs:
       - name: list json items
         shell: bash
         run:  |
-          items=$(echo "${{ env.MULTIPLE_ITEMS_JSON }}" | jq -c -r '.[]')
+          items=$(echo '${{ env.MULTIPLE_ITEMS_JSON }}' | jq -c -r '.[]')
           for item in ${items[@]}; do
             echo $item
           done
