--- a/.github/workflows/docker-image-on-release.yml
+++ b/.github/workflows/docker-image-on-release.yml
@@ -1,4 +1,7 @@
 name: docker-image-on-release
+
+# note that for this workflow to be triggered, the release needs to be created/published using a PAT
+# and not the default GITHUB_TOKEN, as the GITHUB_TOKEN does not allow an event to trigger another workflow.
 on:
   release:
     types:
@@ -24,36 +27,38 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
 
-    # - name: build-image
-    #   run:  |
-    #     docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+    - name: build-image
+      run:  |
+        docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
 
-    # - name: login-ghcr-io
-    #   run:  |
-    #     run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+    - name: login-ghcr-io
+      run:  |
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    # - name: push-image-ghcr-io
-    #   run:  |
+    - name: push-image-ghcr-io
+      run:  |
         
-    #     IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+        IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 
-    #     # Change all uppercase to lowercase
-    #     IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+        # Change all uppercase to lowercase
+        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
         
-    #     # Strip git ref prefix from version
-    #     VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        # Strip git ref prefix from version
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        echo VERSION=$VERSION
         
-    #     # Strip "v" prefix from tag name
-    #     [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+        # Strip "v" prefix from tag name
+        VERSION=$(echo $VERSION | sed -e 's/^v//')
+        echo VERSION=$VERSION
         
-    #     # Use Docker `latest` tag convention
-    #     [ "$VERSION" == "master" ] && VERSION=latest
+        # Use Docker `latest` tag convention
+        VERSION=latest
         
-    #     echo IMAGE_ID=$IMAGE_ID
-    #     echo VERSION=$VERSION
+        echo IMAGE_ID=$IMAGE_ID
+        echo VERSION=$VERSION
         
-    #     docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+        # docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         
-    #     docker push $IMAGE_ID:$VERSION
+        # docker push $IMAGE_ID:$VERSION
 
 
