add github token in step's ENV

--- a/.github/workflows/docker-image-on-release.yml
+++ b/.github/workflows/docker-image-on-release.yml
@@ -34,6 +34,8 @@ jobs:
     - name: login-ghcr-io
       run:  |
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: push-image-ghcr-io
       run:  |
