add checkout step

--- a/.github/workflows/test-json-array.yml
+++ b/.github/workflows/test-json-array.yml
@@ -26,6 +26,12 @@ jobs:
             echo "$item"
           done
 
+      - name: check out repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+
       - name: bash array items
         shell: bash
         run:  |
