--- a/.github/workflows/test-json-array.yml
+++ b/.github/workflows/test-json-array.yml
@@ -43,15 +43,22 @@ jobs:
 
           echo
           echo "array:"
-          echo ${DEVICE_PACKAGES_ARRAY[*]}
+          echo "${DEVICE_PACKAGES_ARRAY[*]}"
           echo
           echo
 
 
-          i=0
-          while [ $i -lt ${NUM_FILES} ] ; do
+          # i=0
+          # while [ $i -lt ${NUM_FILES} ] ; do
+          #   echo $i
+          #   DEVICE_PACKAGE_CURRENT="${DEVICE_PACKAGES_ARRAY[$i]}"
+          #   echo "${DEVICE_PACKAGE_CURRENT}"
+          #   DEVICE_PACKAGE_CONTINUOUS=$(echo "${DEVICE_PACKAGE_CURRENT}" | sed -e "s/${WHICHTAG}/continuous/")
+          #   echo "${DEVICE_PACKAGE_CONTINUOUS}"
+          #   let i++
+          # done
+          for DEVICE_PACKAGE_CURRENT in "${DEVICE_PACKAGES_ARRAY[@]}"; do
             echo $i
-            DEVICE_PACKAGE_CURRENT="${DEVICE_PACKAGES_ARRAY[$i]}"
             echo "${DEVICE_PACKAGE_CURRENT}"
             DEVICE_PACKAGE_CONTINUOUS=$(echo "${DEVICE_PACKAGE_CURRENT}" | sed -e "s/${WHICHTAG}/continuous/")
             echo "${DEVICE_PACKAGE_CONTINUOUS}"
