--- a/.github/workflows/test-json-array.yml
+++ b/.github/workflows/test-json-array.yml
@@ -48,24 +48,26 @@ jobs:
           echo
 
 
-          # i=0
-          # while [ $i -lt ${NUM_FILES} ] ; do
-          #   echo $i
-          #   DEVICE_PACKAGE_CURRENT="${DEVICE_PACKAGES_ARRAY[$i]}"
-          #   echo "${DEVICE_PACKAGE_CURRENT}"
-          #   DEVICE_PACKAGE_CONTINUOUS=$(echo "${DEVICE_PACKAGE_CURRENT}" | sed -e "s/${WHICHTAG}/continuous/")
-          #   echo "${DEVICE_PACKAGE_CONTINUOUS}"
-          #   let i++
-          # done
+          echo
+          echo "while loop"
+          i=0
+          while [ $i -lt ${NUM_FILES} ] ; do
+            echo $i
+            DEVICE_PACKAGE_CURRENT="${DEVICE_PACKAGES_ARRAY[$i]}"
+            echo "${DEVICE_PACKAGE_CURRENT}"
+            DEVICE_PACKAGE_CONTINUOUS=$(echo "${DEVICE_PACKAGE_CURRENT}" | sed -e "s/${WHICHTAG}/continuous/")
+            echo "${DEVICE_PACKAGE_CONTINUOUS}"
+            i=$((i+1))
+          done
+
+          echo
+          echo "for loop"
           i=0
           for DEVICE_PACKAGE_CURRENT in "${DEVICE_PACKAGES_ARRAY[@]}"; do
-            echo "1"
             echo $i
             echo "${DEVICE_PACKAGE_CURRENT}"
             DEVICE_PACKAGE_CONTINUOUS=$(echo "${DEVICE_PACKAGE_CURRENT}" | sed -e "s/${WHICHTAG}/continuous/")
             echo "${DEVICE_PACKAGE_CONTINUOUS}"
-            echo "2"
-            i=i+1
-            echo "3"
+            i=$((i+1))
           done
 
